--- a/Django/240304/CBV_Tube/templates/tube/post_detail.html
+++ b/Django/240304/CBV_Tube/templates/tube/post_detail.html
@@ -1,11 +1,29 @@
 <p>{{object.title}} </p>
 <p>{{object.content}} </p>
+<p>조회수: {{object.view_count}} </p>
 
 {% if post.file_upload %}
     <video src="{{object.file_upload.url}}" controls></video>
 {% endif %}
 
 <hr>
+<section>
+    <h3>댓글</h3>
+    {% for comment in object.comments.all %}
+        <p>{{comment.message}}</p>
+        <p>{{comment.author}}</p>
+        <p>{{comment.updated_at}}</p>
+    {% endfor %}
+</section>
+
+<section>
+    <h3>댓글 작성</h3>
+    <form action="{% url 'tube:comment_new' post.pk %}" method="post">
+        {% csrf_token %}
+        {{ comment_form.as_p }}
+        <input type="submit" value="댓글 작성">
+    </form>
+</section>
 
 <a href="{% url 'tube:post_list' %}">목록</a>
 
